--- a/style.css
+++ b/style.css
@@ -1,59 +1,55 @@
 * {
     padding: 0;
     margin: 0;
+    box-sizing: border-box;
+    list-style: none;
+    text-decoration: none
 }
-   
+
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
 
-.inter-uniquifier {
-  font-family: "Inter", sans-serif;
-  font-optical-sizing: auto;
-  font-weight: weight;
-  font-style: normal;
 
-}
 
-.roboto-uniquifier {
-  font-family: "Roboto", sans-serif;
-  font-optical-sizing: auto;
-  font-weight: weight;
-  font-style: normal;
-  font-variation-settings:
-    "wdth" 100;
-}
 body {
     background-color: #F5F5F7;
     font-family: "Roboto", sans-serif;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
 }
 
 /* HEADER */
 header {
     width: 100%;
-    padding: 10px;
+    padding: 20px;
     background: #fff;
-    display: flex;
-    justify-content: center;
+    text-align: center;
 
-    .logo {
+    >a {
 
-        font-weight: 900;
+        font-weight: 700;
         color: #5847D1;
         font-size: 24px;
-        text-decoration: none;
-        padding: 10px 20px;
+
+        padding: 10px 20px 10px 20px;
     }
 
-    .menu a {
+    nav {
 
         display: inline-block;
-        font-weight: 900;
-        text-decoration: none;
-        color: #000000;
-        font-size: 22px;
-        padding: 10px;
 
+        ul {
+            li {
+                display: inline;
+
+
+                a {
+                    font-weight: 700;
+                    color: #000000;
+                    font-size: 22px;
+                    padding: 10px 20px;
+                }
+            }
+        }
     }
 }
 
@@ -88,16 +84,13 @@ header {
 
 /* BLOG */
 .blog {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+
     padding: 20px;
     max-width: 100%;
-    margin: 0 auto;
-    box-sizing: border-box;
 
 
-    .section-title {
+
+    h2 {
         font-size: 36px;
         font-weight: 700;
         margin-bottom: 40px;
@@ -132,7 +125,7 @@ header {
             width: 100%;
             color: #FFFFFF;
             position: absolute;
-            top: 240px;
+            top: 232px;
             box-sizing: border-box;
             padding: 10px;
         }
@@ -200,81 +193,76 @@ header {
 /* Footer */
 
 .info {
+
     background-color: #1f1f1f;
-    color: #ffffff;
-
-}
-
-.info-container {
-    max-width: 100%;
-    height: 250px;
-    margin: 0;
+    width: 100%;
+    height: 300px;
     padding: 30px;
     display: grid;
     grid-template-columns: repeat(3, 300px);
     justify-content: center;
 
+    h3 {
 
-    .info-col {
-        display: flex;
-        flex-direction: column;
-        align-items: flex-start;
+        color: #FFFFFF;
+        font-size: 18px;
+        font-weight: 700;
+        margin: 0;
+        padding: 10px;
+    }
 
-        h3 {
-            text-align: left;
-            color: #FFFFFF;
-            font-size: 18px;
-            font-weight: 700;
-            margin: 0;
-            padding: 10px;
+    p {
+        font-size: 15px;
+        color: #bdbdbd;
+        line-height: 1.2;
+    }
 
-        }
+    h4 {
+        color: #FFFFFF;
+        font-size: 18px;
+        font-weight: 700;
+        line-height: 1.6;
+        padding: 10px;
+    }
 
-        p {
-            max-width: 280px;
+    ul {
+        li {
             text-align: left;
             font-weight: 400;
             font-size: 15px;
             color: #bdbdbd;
             line-height: 1.2;
-            margin-top: 0;
-            margin-bottom: 0;
-        }
-
-        #contacts {
-            text-align: left;
-            color: #FFFFFF;
-            font-size: 18px;
-            font-weight: 700;
-            line-height: 1.6;
-            margin-top: 30px;
-        }
-
-
-        #category {
-
-            color: #FFFFFF;
-            font-weight: 700;
-            font-size: 18px;
-            line-height: 1.6;
-
         }
     }
-}
 
-.info-list {
+    #category {
+        color: #FFFFFF;
+        font-weight: 700;
+        font-size: 18px;
+        line-height: 1.6;
+    }
 
-    font-size: 15px;
-    color: #bdbdbd;
-    line-height: 1.6;
-    list-style: none;
+    ul {
+        li {
+            font-size: 15px;
+            color: #bdbdbd;
+            line-height: 1.6;
+
+        }
+
+    }
+
+
+    
 }
 
 
 .rights {
-    background-color: #000;
+    background-color: #020202;
     text-align: center;
+    height: 55px;
     padding: 16px 0;
     font-size: 15px;
-    color: #9e9e9e;
+    color: #86868B;
+
 }
