--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
 
 
 
-body {
+.general {
     background-color: #F5F5F7;
     font-family: "Roboto", sans-serif;
     width: 100vw;
@@ -29,13 +29,14 @@ header {
         font-weight: 700;
         color: #5847D1;
         font-size: 24px;
-
-        padding: 10px 20px 10px 20px;
+        padding: 10px;
+        margin-right: 40px;
     }
 
     nav {
 
         display: inline-block;
+        margin-left: 40px;
 
         ul {
             li {
@@ -46,7 +47,7 @@ header {
                     font-weight: 700;
                     color: #000000;
                     font-size: 22px;
-                    padding: 10px 20px;
+                    padding: 10px;
                 }
             }
         }
@@ -56,137 +57,142 @@ header {
 /* HERO */
 .hero {
     width: 100%;
-    height: 350px;
+    height: 400px;
     background-image: url(./assets/e11fe0289d1ad6e93656e54c43b99f9275d82560.jpg);
     background-size: cover;
     background-position: center;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
     color: #fff;
     text-align: center;
-
-    h1 {
-
-        font-size: 48px;
-        font-weight: 700;
-        font-style: 900;
-    }
-
-    p {
-        font-weight: 500;
-        font-style: 400;
-        font-size: 20px;
-        margin-top: 10px;
-    }
 }
 
-/* BLOG */
-.blog {
+.hero h1 {
 
+    display: inline-block;
+    text-align: center;
+    width: 975px;
+    height: 53px;
+    font-size: 48px;
+    font-weight: 700;
+    font-style: 900;
+    padding: 80px;
+    line-height: 100%;
+    letter-spacing: 0%;
+}
+
+.hero p {
+    display: inline-block;
+    text-align: center;
+    width: 641px;
+    height: 24px;
+    font-weight: 500;
+    font-style: 400;
+    font-size: 20px;
+    line-height: 100%;
+    letter-spacing: 0%;
+    padding: 10px;
+    margin: 0;
+
+}
+
+
+/* Section  */
+
+.title {
+    font-size: 36px;
+    font-weight: 700;
+    margin-bottom: 40px;
+    text-align: center;
     padding: 20px;
-    max-width: 100%;
+}
+
+/* CARDS */
+.cards {
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(3, 320px);
+    justify-content: center;
+    gap: 16px;
+}
+
+.card-group {
+    background: #fff;
+    position: relative;
+    width: 320px;
+    min-height: 520px;
+
+}
+
+.card-img {
+    box-sizing: border-box;
+    width: 320px;
+    height: 240px;
+
+}
+
+.card-content {
+    box-sizing: border-box;
+    width: 322px;
+    height: 200px;
+    color: #FFFFFF;
+    position: absolute;
+    padding: 10px;
+}
+
+.card-content span {
+    display: inline-block;
+    font-weight: 400;
+    font-size: 13px;
+    color: #000000;
+    margin: 0 40px 0 0;
+    line-height: 100%;
+
+}
+
+.card-content h3 {
+
+    width: 100%;
+    height: 70px;
+    font-size: 22px;
+    font-weight: 700;
+    color: #000000;
+
+}
+
+.card-desc {
+
+    text-align: left;
+    font-weight: 400;
+    font-size: 15px;
+    color: #000000;
+    line-height: 1.4;
+    margin: 0;
+}
 
 
 
-    h2 {
-        font-size: 36px;
-        font-weight: 700;
-        margin-bottom: 40px;
-        text-align: center;
-    }
+/* COLORS */
+.purple {
+    background: #C7B8FF;
+}
 
-    /* CARDS */
-    .cards {
-        width: 100%;
-        display: grid;
-        grid-template-columns: repeat(3, 320px);
-        justify-content: center;
-        gap: 16px;
+.pink {
+    background: #FFB8D8;
+}
 
-        .card-group {
-            background: #fff;
-            position: relative;
-            width: 320px;
-            min-height: 520px;
+.blue {
+    background: #B8E0FF;
+}
 
-        }
+.green {
+    background: #D4FFB8;
+}
 
-        .card-img {
-            width: 320px;
-            height: 240px;
-            object-fit: cover;
-            display: block;
-        }
+.yellow {
+    background: #FFE4B8;
+}
 
-        .card-content {
-
-            width: 100%;
-            color: #FFFFFF;
-            position: absolute;
-            top: 232px;
-            box-sizing: border-box;
-            padding: 10px;
-        }
-
-        span {
-            display: inline-block;
-            text-align: center;
-            font-weight: normal;
-            font-size: 15px;
-            color: #000000;
-            padding: 10px;
-            line-height: 1;
-            letter-spacing: 0;
-        }
-
-        h3 {
-
-            width: 100%;
-            height: 70px;
-            font-size: 22px;
-            font-weight: 700;
-            color: #000000;
-            margin: 0 auto;
-        }
-
-        .card-desc {
-
-            text-align: left;
-            font-weight: 400;
-            font-size: 15px;
-            color: #000000;
-            line-height: 1.4;
-            margin: 0;
-        }
-
-    }
-
-    /* COLORS */
-    .purple {
-        background: #C7B8FF;
-    }
-
-    .pink {
-        background: #FFB8D8;
-    }
-
-    .blue {
-        background: #B8E0FF;
-    }
-
-    .green {
-        background: #D4FFB8;
-    }
-
-    .yellow {
-        background: #FFE4B8;
-    }
-
-    .orange {
-        background: #FFD4B8;
-    }
+.orange {
+    background: #FFD4B8;
 }
 
 
@@ -201,61 +207,62 @@ header {
     display: grid;
     grid-template-columns: repeat(3, 300px);
     justify-content: center;
-
-    h3 {
-
-        color: #FFFFFF;
-        font-size: 18px;
-        font-weight: 700;
-        margin: 0;
-        padding: 10px;
-    }
-
-    p {
-        font-size: 15px;
-        color: #bdbdbd;
-        line-height: 1.2;
-    }
-
-    h4 {
-        color: #FFFFFF;
-        font-size: 18px;
-        font-weight: 700;
-        line-height: 1.6;
-        padding: 10px;
-    }
-
-    ul {
-        li {
-            text-align: left;
-            font-weight: 400;
-            font-size: 15px;
-            color: #bdbdbd;
-            line-height: 1.2;
-        }
-    }
-
-    #category {
-        color: #FFFFFF;
-        font-weight: 700;
-        font-size: 18px;
-        line-height: 1.6;
-    }
-
-    ul {
-        li {
-            font-size: 15px;
-            color: #bdbdbd;
-            line-height: 1.6;
-
-        }
-
-    }
-
-
-    
 }
 
+.info-techblog {
+    display: inline-block;
+    width: 91px;
+    height: 24px;
+    color: #FFFFFF;
+    font-size: 20px;
+    font-weight: 700;
+    padding: 10px;
+}
+
+.info p {
+    display: inline-block;
+    width: 296px;
+    height: 68px;
+    font-size: 14px;
+    color: #bdbdbd;
+    line-height: 1.;
+    margin: 10px;
+}
+
+
+.contacts {
+    color: #FFFFFF;
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 1.6;
+    padding: 10px;
+
+}
+
+.cont-list {
+
+    text-align: left;
+    font-weight: 400;
+    font-size: 14px;
+    color: #bdbdbd;
+    line-height: 1.2;
+
+}
+
+.category {
+    color: #FFFFFF;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 1.6;
+
+}
+
+.category-list {
+    font-size: 14px;
+    color: #bdbdbd;
+    line-height: 1.6;
+
+}
 
 .rights {
     background-color: #020202;
